--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <div class="sidebar">
         <div class="logo-container">
-          <a href="#"><img class="logo-icon" src="./img/view-dashboard.png" alt="" />Dashboard</a>
+          <a href="#"><img class="logo-icon" src="./img/view-dashboard.png" alt="" /><p>Dashboard</p></a>
         </div>
         <ul class="sidebar-item">
           <li><a href="#"><img class="icon" src="./img/home.png" alt="" >Home</a></li>
@@ -57,7 +60,8 @@
           <div class="projects">
             <h2>Your Projects</h2>
             <div class="grid-container">
-              <div class="project-card"><h3>Super Cool Project</h3>
+              <div class="project-card">
+                <h3>Super Cool Project</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis debitis.</p>
                 <span>
                   <img class="main-icon" src="./img/star-plus-outline.png" alt="">
@@ -65,7 +69,8 @@
                   <img class="main-icon" src="./img/source-fork.png" alt="">
                 </span>
               </div>
-              <div class="project-card"><h3>Less Cool Project </h3>
+              <div class="project-card">
+                <h3>Less Cool Project</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis debitis.</p>
                 <span>
                   <img class="main-icon" src="./img/star-plus-outline.png" alt="">
@@ -73,7 +78,8 @@
                   <img class="main-icon" src="./img/source-fork.png" alt="">
                 </span>
               </div>
-              <div class="project-card">Impossible App
+              <div class="project-card">
+                <h3>Impossible App</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis debitis.</p>
                 <span>
                   <img class="main-icon" src="./img/star-plus-outline.png" alt="">
@@ -81,7 +87,8 @@
                   <img class="main-icon" src="./img/source-fork.png" alt="">
                 </span>
               </div>
-              <div class="project-card">Easy Peasy App
+              <div class="project-card">
+                <h3>Easy Peasy App</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis debitis.</p>
                 <span>
                   <img class="main-icon" src="./img/star-plus-outline.png" alt="">
@@ -89,7 +96,8 @@
                   <img class="main-icon" src="./img/source-fork.png" alt="">
                 </span>
               </div>
-              <div class="project-card"><h3>Ad Blocker</h3>
+              <div class="project-card">
+                <h3>Ad Blocker</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis debitis.</p>
                 <span>
                   <img class="main-icon" src="./img/star-plus-outline.png" alt="">
@@ -97,7 +105,8 @@
                   <img class="main-icon" src="./img/source-fork.png" alt="">
                 </span>
               </div>
-              <div class="project-card"><h3>Money Maker</h3>
+              <div class="project-card">
+                <h3>Money Maker</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis debitis.</p>
                 <span>
                   <img class="main-icon" src="./img/star-plus-outline.png" alt="">
@@ -109,25 +118,64 @@
           </div>
           <div class="announcements">
             <h2>Announcements</h2>
-            <div>
-              <div class="announcement"><h3>Site Maintenance</h3>
+            <div class="announcements-group">
+              <div class="announcement">
+                <h3>Site Maintenance</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis debitis.</p>
               </div>
-              <div class="announcement"><h3>Community Share Day</h3>
+              <hr>
+              <div class="announcement">
+                <h3>Community Share Day</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis debitis.
                 </p>
               </div>
-              <div class="announcement"><h3>Updated Privacy Policy</h3>
+              <hr>
+              <div class="announcement">
+                <h3>Updated Privacy Policy</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis debitis.</p>
               </div>
             </div>
           </div>
           <div class="trending">
             <h2>Trending</h2>
-            <div class="trend">#tegan World Peace Builder</div>
-            <div class="trend">#morgan Super Cool Project</div>
-            <div class="trend">#kendall Life Changing App</div>
-            <div class="trend">#alex No Traffic Maker</div>
+            <div class="trending-group">
+              <div class="trend">
+                <div class="photo">
+                  <img class="small-user-avatar" src="./img/man1.png" alt="User Avatar" />
+                </div>
+                <div class="hash">
+                  <span>#tegan</span>
+                  <p>World Peace Builder</p>
+                </div>
+              </div>
+              <div class="trend">
+                <div class="photo">
+                  <img class="small-user-avatar" src="./img/user.png" alt="User Avatar" />
+                </div>
+                <div class="hash">
+                  <span>#morgan</span>
+                  <p>Super Cool Project</p>
+                </div>
+              </div>
+              <div class="trend">
+                <div class="photo">
+                  <img class="small-user-avatar" src="./img/hacker.png" alt="User Avatar" />
+                </div>
+                <div class="hash">
+                  <span>#kendall</span>
+                  <p>Life Changing App</p>
+                </div>
+              </div>
+              <div class="trend">
+                <div class="photo">
+                  <img class="small-user-avatar" src="./img/man.png" alt="User Avatar" />
+                </div>
+                <div class="hash">
+                  <span>#alex</span>
+                  <p>No Traffic Maker</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
